--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1><strong>MAYIEKO BANK ACCOUNT</strong></h1>
     <h2>Register Account</h2>
     <div class="row">
-      <form action="" id="bankAccount">
-        <div class="col-md-6">
+      <div class="col-md-6">
+        <form action="" id="new-account">
           <div class="form-group">
             <label for="">name</label>
             <input type="text" class="form-control" id="name">
@@ -27,26 +27,35 @@
             <label for="">Initial Deposit</label>
             <input type="text" class="form-control" id="initialDeposit">
           </div>
-          <button type="button" name="button" class="btn btn-primary" id="btnRegister">Register</button>
-        </div>
-        <div class="col-md-6">
-
+          <button type="submit" name="button" class="btn btn-primary" id="btnRegister">Register</button>
+        </form>
+      </div>
+      <div class="col-md-6">
+        <h3>Accounts</h3>
+        <ul id="accounts"></ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <h3>Current balance for <span id="account-name"></span></h3>
+        <p>KSH. <span id="current-balance"></span></p>
+      </div>
+      <div class="col-md-6" id="account-actions">
+        <form action="" id="deposits">
           <div class="form-group">
             <label for="">Deposit</label>
             <input type="text" class="form-control" id="deposit">
           </div>
-          <button type="button" name="button" class="btn btn-primary" id="btnDeposit">Deposit</button>
+          <button type="submit" name="button" class="btn btn-primary" id="btnDeposit">Deposit</button>
+        </form>
+        <form action="" id="withdrawals">
           <div class="form-group">
             <label for="">Withdraw</label>
             <input type="text" class="form-control" id="withdraw">
           </div>
-          <button type="button" name="button" class="btn btn-primary" id="btnWithdraw">Withdraw</button>
-        </div>
-      </form>
-    </div>
-    <div class="row">
-      <h3>Current balance</h3>
-      <p>KSH. <span id="current-balance"></span></p>
+          <button type="submit" name="button" class="btn btn-primary" id="btnWithdraw">Withdraw</button>
+        </form>
+      </div>
     </div>
 
   </div>
